--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@fuz.dev/fuz_template",
-  "description": "a static web app and Node library template with TypeScript, Svelte, SvelteKit, Vite, esbuild, Fuz, and Gro",
+  "name": "@fuz.dev/fuz_mastodon",
+  "description": "Mastodon components and helpers for Svelte, SvelteKit, and Fuz",
   "version": "0.0.1",
   "license": "MIT",
-  "homepage": "https://template.fuz.dev/",
-  "repository": "https://github.com/fuz-dev/fuz_template",
+  "homepage": "https://mastodon.fuz.dev/",
+  "repository": "https://github.com/fuz-dev/fuz_mastodon",
   "type": "module",
   "engines": {
     "node": ">=20.7"
