--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@changesets/changelog-git": "^0.1.14",
     "@feltjs/eslint-config": "^0.4.1",
     "@fuz.dev/fuz": "^0.73.0",
     "@fuz.dev/fuz_contextmenu": "^0.4.1",
@@ -30,6 +31,7 @@
     "@grogarden/util": "^0.15.2",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.0",
+    "@sveltejs/package": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "date-fns": "^2.30.0",
