--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "@fuz.dev/fuz_library": "*",
+    "@fuz.dev/svelte_intersect": "*",
+    "@sveltejs/kit": "*",
+    "svelte": "*"
+  },
   "devDependencies": {
     "@changesets/changelog-git": "^0.1.14",
     "@feltjs/eslint-config": "^0.4.1",
