upgrade `@grogarden/gro` to fix `package.ts`

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@fuz.dev/fuz_mastodon",
   "description": "Mastodon components and helpers for Svelte, SvelteKit, and Fuz",
   "version": "0.1.2",
+  "public": true,
   "license": "MIT",
   "homepage": "https://mastodon.fuz.dev/",
   "repository": "https://github.com/fuz-dev/fuz_mastodon",
@@ -27,24 +28,25 @@
   "peerDependencies": {
     "@fuz.dev/fuz_library": "*",
     "@fuz.dev/svelte_intersect": "*",
+    "@grogarden/util": "*",
     "@sveltejs/kit": "*",
     "svelte": "*"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.1.14",
     "@feltjs/eslint-config": "^0.4.1",
-    "@fuz.dev/fuz": "^0.75.2",
-    "@fuz.dev/fuz_contextmenu": "^0.4.2",
-    "@fuz.dev/fuz_dialog": "^0.3.2",
-    "@fuz.dev/fuz_library": "^0.12.3",
-    "@fuz.dev/svelte_intersect": "^0.5.1",
-    "@grogarden/gro": "^0.96.1",
+    "@fuz.dev/fuz": "^0.77.1",
+    "@fuz.dev/fuz_contextmenu": "^0.5.1",
+    "@fuz.dev/fuz_dialog": "^0.4.2",
+    "@fuz.dev/fuz_library": "^0.17.0",
+    "@fuz.dev/svelte_intersect": "^0.6.1",
+    "@grogarden/gro": "^0.98.1",
     "@grogarden/util": "^0.15.2",
     "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.27.1",
+    "@sveltejs/kit": "^1.27.2",
     "@sveltejs/package": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "date-fns": "^2.30.0",
     "eslint": "^8.52.0",
     "eslint-plugin-svelte": "^2.34.0",
