--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltjs"
+    "extends": "@feltjs",
+    "rules": {
+      "no-console": 1
+    }
   },
   "prettier": {
     "plugins": [
