--- a/package.json
+++ b/package.json
@@ -28,44 +28,44 @@
   ],
   "peerDependencies": {
     "@fuz.dev/fuz_library": "*",
-    "@fuz.dev/svelte_intersect": "*",
-    "@grogarden/util": "*",
+    "@ryanatkn/belt": "*",
     "@sveltejs/kit": "*",
-    "svelte": "*"
+    "svelte": "*",
+    "svelte-intersect": "*"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
-    "@feltjs/eslint-config": "^0.4.1",
     "@fuz.dev/fuz": "^0.81.0",
     "@fuz.dev/fuz_code": "^0.5.0",
     "@fuz.dev/fuz_contextmenu": "^0.7.0",
     "@fuz.dev/fuz_dialog": "^0.6.0",
     "@fuz.dev/fuz_library": "^0.23.0",
-    "@fuz.dev/svelte_intersect": "^0.8.0",
-    "@grogarden/gro": "^0.107.0",
-    "@grogarden/util": "^0.18.1",
+    "@ryanatkn/belt": "^0.20.3",
+    "@ryanatkn/eslint-config": "^0.1.0",
+    "@ryanatkn/gro": "^0.112.0",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.0.4",
-    "@sveltejs/package": "^2.2.4",
+    "@sveltejs/kit": "^2.5.0",
+    "@sveltejs/package": "^2.2.6",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "date-fns": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "date-fns": "^3.3.1",
     "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
+    "svelte": "^4.2.9",
+    "svelte-check": "^3.6.3",
+    "svelte-intersect": "^0.11.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6"
   },
   "eslintConfig": {
     "root": true,
-    "extends": "@feltjs",
+    "extends": "@ryanatkn",
     "rules": {
       "no-console": 1
     }
