--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "email": "mail@ryanatkn.com",
     "url": "https://www.ryanatkn.com/"
   },
+  "bugs": "https://github.com/ryanatkn/fuz_mastodon/issues",
+  "funding": "https://www.ryanatkn.com/funding",
   "type": "module",
   "engines": {
     "node": ">=20.10"
