--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ryanatkn/eslint-config": "^0.1.0",
     "@ryanatkn/fuz": "^0.91.3",
     "@ryanatkn/fuz_code": "^0.11.0",
-    "@ryanatkn/gro": "^0.112.4",
+    "@ryanatkn/gro": "^0.115.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.3",
     "@sveltejs/package": "^2.3.0",
@@ -55,7 +55,7 @@
     "prettier-plugin-svelte": "^3.2.2",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^4.2.12",
+    "svelte": "^5.0.0-next.102",
     "svelte-check": "^3.6.6",
     "svelte-intersect": "^0.12.1",
     "tslib": "^2.6.2",
