--- a/package.json
+++ b/package.json
@@ -37,29 +37,29 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
-    "@ryanatkn/belt": "^0.20.6",
-    "@ryanatkn/eslint-config": "^0.1.0",
-    "@ryanatkn/fuz": "^0.91.3",
+    "@ryanatkn/belt": "^0.20.10",
+    "@ryanatkn/eslint-config": "^0.1.2",
+    "@ryanatkn/fuz": "^0.93.3",
     "@ryanatkn/fuz_code": "^0.11.0",
     "@ryanatkn/gro": "^0.115.0",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.3",
-    "@sveltejs/package": "^2.3.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "date-fns": "^3.3.1",
+    "@sveltejs/kit": "^2.5.5",
+    "@sveltejs/package": "^2.3.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint-plugin-svelte": "^2.37.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
+    "prettier-plugin-svelte": "^3.2.3",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
     "svelte": "^5.0.0-next.102",
-    "svelte-check": "^3.6.6",
+    "svelte-check": "^3.6.9",
     "svelte-intersect": "^0.12.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.5",
     "uvu": "^0.5.6"
   },
   "eslintConfig": {
@@ -87,6 +87,7 @@
     ]
   },
   "exports": {
+    "./package.json": "./package.json",
     "./Mastodon_Status_Item.svelte": {
       "svelte": "./dist/Mastodon_Status_Item.svelte",
       "default": "./dist/Mastodon_Status_Item.svelte",
