add peer deps for Svelte and SvelteKit

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "peerDependencies": {
     "@ryanatkn/belt": "*",
     "@ryanatkn/fuz": "*",
-    "@sveltejs/kit": "*",
-    "svelte": "*",
-    "svelte-intersect": "*"
+    "@sveltejs/kit": "^2",
+    "svelte": "^5.0.0-next.0",
+    "svelte-intersect": "^0.14"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
