--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "test": "gro test",
     "deploy": "gro deploy"
   },
-  "files": [
-    "dist"
-  ],
   "peerDependencies": {
     "@ryanatkn/belt": "*",
     "@ryanatkn/fuz": "*",
@@ -87,6 +84,12 @@
       }
     ]
   },
+  "sideEffects": [
+    "**/*.css"
+  ],
+  "files": [
+    "dist"
+  ],
   "exports": {
     "./package.json": "./package.json",
     "./Mastodon_Status_Item.svelte": {
