--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@ryanatkn/fuz_mastodon",
+  "version": "0.14.0",
   "description": "Mastodon components and helpers for Svelte, SvelteKit, and Fuz",
   "glyph": "🦣",
-  "version": "0.14.0",
+  "logo": "logo.svg",
+  "logo_alt": "a friendly pixelated spider facing you",
   "public": true,
   "license": "MIT",
   "homepage": "https://mastodon.fuz.dev/",
@@ -14,16 +16,16 @@
   },
   "bugs": "https://github.com/ryanatkn/fuz_mastodon/issues",
   "funding": "https://www.ryanatkn.com/funding",
-  "type": "module",
-  "engines": {
-    "node": ">=20.12"
-  },
   "scripts": {
     "start": "gro dev",
     "dev": "gro dev",
     "build": "gro build",
     "test": "gro test",
     "deploy": "gro deploy"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=20.12"
   },
   "peerDependencies": {
     "@ryanatkn/belt": "*",
