--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@ryanatkn/fuz_mastodon",
+  "version": "0.14.0",
   "description": "Mastodon components and helpers for Svelte, SvelteKit, and Fuz",
   "glyph": "🦣",
-  "version": "0.14.0",
+  "logo": "logo.svg",
+  "logo_alt": "a friendly purple spider facing you",
   "public": true,
   "license": "MIT",
   "homepage": "https://mastodon.fuz.dev/",
@@ -14,16 +16,16 @@
   },
   "bugs": "https://github.com/ryanatkn/fuz_mastodon/issues",
   "funding": "https://www.ryanatkn.com/funding",
-  "type": "module",
-  "engines": {
-    "node": ">=20.12"
-  },
   "scripts": {
     "start": "gro dev",
     "dev": "gro dev",
     "build": "gro build",
     "test": "gro test",
     "deploy": "gro deploy"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=20.12"
   },
   "peerDependencies": {
     "@ryanatkn/belt": "*",
@@ -34,11 +36,11 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
-    "@ryanatkn/belt": "^0.23.0",
+    "@ryanatkn/belt": "^0.24.1",
     "@ryanatkn/eslint-config": "^0.1.3",
-    "@ryanatkn/fuz": "^0.105.2",
+    "@ryanatkn/fuz": "^0.106.3",
     "@ryanatkn/fuz_code": "^0.15.1",
-    "@ryanatkn/gro": "^0.126.0",
+    "@ryanatkn/gro": "^0.128.0",
     "@ryanatkn/moss": "^0.6.2",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.17",
