--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-svelte": "^2.41.0",
+    "esm-env": "^1.0.0",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.5",
     "prism-svelte": "^0.5.0",
