--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "@changesets/changelog-git": "^0.2.0",
     "@ryanatkn/belt": "^0.24.1",
     "@ryanatkn/eslint-config": "^0.1.3",
-    "@ryanatkn/fuz": "^0.106.3",
+    "@ryanatkn/fuz": "^0.107.1",
     "@ryanatkn/fuz_code": "^0.15.1",
-    "@ryanatkn/gro": "^0.128.0",
-    "@ryanatkn/moss": "^0.6.2",
+    "@ryanatkn/gro": "^0.129.0",
+    "@ryanatkn/moss": "^0.6.3",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.17",
     "@sveltejs/package": "^2.3.2",
@@ -51,6 +51,7 @@
     "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-svelte": "^2.41.0",
+    "esm-env": "^1.0.0",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.5",
     "prism-svelte": "^0.5.0",
