--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "gro dev",
     "dev": "gro dev",
     "build": "gro build",
+    "check": "gro check",
     "test": "gro test",
+    "preview": "vite preview",
     "deploy": "gro deploy"
   },
   "type": "module",
