--- a/package.json
+++ b/package.json
@@ -85,7 +85,10 @@
     "**/*.css"
   ],
   "files": [
-    "dist"
+    "dist",
+    "src/lib/**/*.ts",
+    "!src/lib/**/*.test.*",
+    "!dist/**/*.test.*"
   ],
   "exports": {
     "./package.json": "./package.json",
