--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "node": ">=20.12"
   },
   "peerDependencies": {
-    "@ryanatkn/belt": "*",
-    "@ryanatkn/fuz": "*",
+    "@ryanatkn/belt": "0.24",
+    "@ryanatkn/fuz": "0.110",
     "@sveltejs/kit": "^2",
     "date-fns": "^3",
     "esm-env": "^1",
@@ -58,7 +58,7 @@
     "prettier-plugin-svelte": "^3.2.5",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^5.0.0-next.184",
+    "svelte": "^5.0.0-next.185",
     "svelte-check": "^3.8.4",
     "svelte-intersect": "^0.14.2",
     "tslib": "^2.6.3",
