--- a/package.json
+++ b/package.json
@@ -30,19 +30,21 @@
     "node": ">=20.12"
   },
   "peerDependencies": {
-    "@ryanatkn/belt": "*",
-    "@ryanatkn/fuz": "*",
+    "@ryanatkn/belt": "0.24",
+    "@ryanatkn/fuz": "^0.112.0",
     "@sveltejs/kit": "^2",
+    "date-fns": "^3",
+    "esm-env": "^1",
     "svelte": "^5.0.0-next.0",
     "svelte-intersect": "^0.14"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
-    "@ryanatkn/belt": "^0.24.7",
-    "@ryanatkn/eslint-config": "^0.4.1",
-    "@ryanatkn/fuz": "^0.110.4",
+    "@ryanatkn/belt": "^0.24.9",
+    "@ryanatkn/eslint-config": "^0.4.2",
+    "@ryanatkn/fuz": "^0.112.0",
     "@ryanatkn/fuz_code": "^0.16.0",
-    "@ryanatkn/gro": "^0.130.1",
+    "@ryanatkn/gro": "^0.132.0",
     "@ryanatkn/moss": "^0.8.0",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.18",
@@ -56,7 +58,7 @@
     "prettier-plugin-svelte": "^3.2.5",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^5.0.0-next.184",
+    "svelte": "^5.0.0-next.186",
     "svelte-check": "^3.8.4",
     "svelte-intersect": "^0.14.2",
     "tslib": "^2.6.3",
