--- a/package.json
+++ b/package.json
@@ -41,30 +41,30 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
-    "@ryanatkn/belt": "^0.24.11",
-    "@ryanatkn/eslint-config": "^0.4.2",
-    "@ryanatkn/fuz": "^0.119.0",
+    "@ryanatkn/belt": "^0.24.12",
+    "@ryanatkn/eslint-config": "^0.5.1",
+    "@ryanatkn/fuz": "^0.120.2",
     "@ryanatkn/fuz_code": "^0.18.0",
     "@ryanatkn/gro": "^0.133.6",
-    "@ryanatkn/moss": "^0.12.0",
-    "@sveltejs/adapter-static": "^3.0.2",
-    "@sveltejs/kit": "^2.5.18",
-    "@sveltejs/package": "^2.3.2",
+    "@ryanatkn/moss": "^0.13.3",
+    "@sveltejs/adapter-static": "^3.0.4",
+    "@sveltejs/kit": "^2.5.22",
+    "@sveltejs/package": "^2.3.4",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "date-fns": "^3.6.0",
-    "eslint": "^9.7.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-svelte": "^2.43.0",
     "esm-env": "^1.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^5.0.0-next.196",
-    "svelte-check": "^3.8.4",
+    "svelte": "^5.0.0-next.221",
+    "svelte-check": "^3.8.5",
     "svelte-intersect": "^0.14.2",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0-alpha.44",
+    "typescript-eslint": "^8.1.0",
     "uvu": "^0.5.6"
   },
   "prettier": {
