--- a/package.json
+++ b/package.json
@@ -34,37 +34,35 @@
     "@ryanatkn/fuz": "*",
     "@ryanatkn/moss": "*",
     "@sveltejs/kit": "^2",
-    "date-fns": "^3",
+    "date-fns": "^4",
     "esm-env": "^1",
-    "svelte": "^5.0.0-next.0",
-    "svelte-intersect": "^0.15.0"
+    "svelte": "^5.0.0-next.0"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
     "@ryanatkn/belt": "^0.25.0",
     "@ryanatkn/eslint-config": "^0.5.3",
-    "@ryanatkn/fuz": "^0.122.0",
-    "@ryanatkn/fuz_code": "^0.18.0",
+    "@ryanatkn/fuz": "^0.124.4",
+    "@ryanatkn/fuz_code": "^0.19.0",
     "@ryanatkn/gro": "^0.135.0",
-    "@ryanatkn/moss": "^0.16.0",
-    "@sveltejs/adapter-static": "^3.0.4",
-    "@sveltejs/kit": "^2.5.27",
+    "@ryanatkn/moss": "^0.16.1",
+    "@sveltejs/adapter-static": "^3.0.5",
+    "@sveltejs/kit": "^2.5.28",
     "@sveltejs/package": "^2.3.5",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
-    "date-fns": "^3.6.0",
-    "eslint": "^9.10.0",
+    "date-fns": "^4.1.0",
+    "eslint": "^9.11.0",
     "eslint-plugin-svelte": "^2.44.0",
     "esm-env": "^1.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^5.0.0-next.246",
+    "svelte": "^5.0.0-next.257",
     "svelte-check": "^4.0.2",
-    "svelte-intersect": "^0.15.0",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.5.0",
+    "typescript-eslint": "^8.6.0",
     "uvu": "^0.5.6"
   },
   "prettier": {
