--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		"declarationMap": true,
 		"sourceRoot": "../src/lib/",
 		"importHelpers": true,
-		"skipLibCheck": true,
+		"skipLibCheck": false,
 		"allowJs": true,
 		"allowImportingTsExtensions": true,
 		"checkJs": true
