--- a/package.json
+++ b/package.json
@@ -36,33 +36,33 @@
     "@sveltejs/kit": "^2",
     "date-fns": "^4",
     "esm-env": "^1",
-    "svelte": "^5.0.0-next.0"
+    "svelte": "^5"
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
     "@ryanatkn/belt": "^0.25.3",
     "@ryanatkn/eslint-config": "^0.5.5",
     "@ryanatkn/fuz": "^0.129.5",
-    "@ryanatkn/fuz_code": "^0.19.0",
-    "@ryanatkn/gro": "^0.140.0",
-    "@ryanatkn/moss": "^0.16.1",
-    "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/kit": "^2.7.0",
-    "@sveltejs/package": "^2.3.5",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@ryanatkn/fuz_code": "^0.20.0",
+    "@ryanatkn/gro": "^0.143.1",
+    "@ryanatkn/moss": "^0.18.2",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.7.3",
+    "@sveltejs/package": "^2.3.7",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "date-fns": "^4.1.0",
-    "eslint": "^9.12.0",
-    "eslint-plugin-svelte": "^2.44.1",
+    "eslint": "^9.13.0",
+    "eslint-plugin-svelte": "^2.46.0",
     "esm-env": "^1.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0",
-    "svelte": "^5.0.0-next.264",
+    "svelte": "^5.1.3",
     "svelte-check": "^4.0.5",
-    "tslib": "^2.7.0",
+    "tslib": "^2.8.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1",
+    "typescript-eslint": "^8.11.0",
     "uvu": "^0.5.6"
   },
   "prettier": {
