--- a/package.json
+++ b/package.json
@@ -40,30 +40,30 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.1",
-    "@ryanatkn/belt": "^0.30.2",
+    "@ryanatkn/belt": "^0.34.1",
     "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.143.0",
-    "@ryanatkn/fuz_code": "^0.23.0",
-    "@ryanatkn/gro": "^0.158.0",
-    "@ryanatkn/moss": "^0.29.0",
-    "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.20.8",
-    "@sveltejs/package": "^2.3.11",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@ryanatkn/fuz": "^0.145.0",
+    "@ryanatkn/fuz_code": "^0.24.0",
+    "@ryanatkn/gro": "^0.162.2",
+    "@ryanatkn/moss": "^0.32.0",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.37.1",
+    "@sveltejs/package": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "date-fns": "^4.1.0",
-    "eslint": "^9.25.1",
-    "eslint-plugin-svelte": "^3.5.1",
+    "eslint": "^9.35.0",
+    "eslint-plugin-svelte": "^3.12.2",
     "esm-env": "^1.2.2",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.30.0",
-    "svelte": "^5.28.2",
-    "svelte-check": "^4.1.6",
+    "svelte": "^5.38.7",
+    "svelte-check": "^4.3.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.1",
-    "uvu": "^0.5.6"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0",
+    "vitest": "^3.2.4"
   },
   "prettier": {
     "plugins": [
