upgrade @ryanatkn/moss@0.36

--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "@changesets/changelog-git": "^0.2.1",
     "@ryanatkn/belt": "^0.34.1",
     "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.145.0",
-    "@ryanatkn/fuz_code": "^0.24.0",
-    "@ryanatkn/gro": "^0.164.1",
-    "@ryanatkn/moss": "^0.33.0",
+    "@ryanatkn/fuz": "^0.146.0",
+    "@ryanatkn/fuz_code": "^0.26.0",
+    "@ryanatkn/gro": "^0.167.1",
+    "@ryanatkn/moss": "^0.36.0",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.37.1",
     "@sveltejs/package": "^2.5.0",
@@ -93,42 +93,14 @@
   ],
   "exports": {
     "./package.json": "./package.json",
-    "./mastodon_cache.svelte.js": {
-      "types": "./dist/mastodon_cache.svelte.d.ts",
-      "default": "./dist/mastodon_cache.svelte.js"
+    "./*.js": {
+      "types": "./dist/*.d.ts",
+      "default": "./dist/*.js"
     },
-    "./Mastodon_Status_Item.svelte": {
-      "types": "./dist/Mastodon_Status_Item.svelte.d.ts",
-      "svelte": "./dist/Mastodon_Status_Item.svelte",
-      "default": "./dist/Mastodon_Status_Item.svelte"
-    },
-    "./Mastodon_Status_Tree.svelte": {
-      "types": "./dist/Mastodon_Status_Tree.svelte.d.ts",
-      "svelte": "./dist/Mastodon_Status_Tree.svelte",
-      "default": "./dist/Mastodon_Status_Tree.svelte"
-    },
-    "./mastodon.js": {
-      "types": "./dist/mastodon.d.ts",
-      "default": "./dist/mastodon.js"
-    },
-    "./storage.js": {
-      "types": "./dist/storage.d.ts",
-      "default": "./dist/storage.js"
-    },
-    "./Toot_Input.svelte": {
-      "types": "./dist/Toot_Input.svelte.d.ts",
-      "svelte": "./dist/Toot_Input.svelte",
-      "default": "./dist/Toot_Input.svelte"
-    },
-    "./Toot_Loader.svelte": {
-      "types": "./dist/Toot_Loader.svelte.d.ts",
-      "svelte": "./dist/Toot_Loader.svelte",
-      "default": "./dist/Toot_Loader.svelte"
-    },
-    "./Toot.svelte": {
-      "types": "./dist/Toot.svelte.d.ts",
-      "svelte": "./dist/Toot.svelte",
-      "default": "./dist/Toot.svelte"
+    "./*.svelte": {
+      "types": "./dist/*.svelte.d.ts",
+      "svelte": "./dist/*.svelte",
+      "default": "./dist/*.svelte"
     }
   }
 }
