--- a/package.json
+++ b/package.json
@@ -97,6 +97,10 @@
       "types": "./dist/*.d.ts",
       "default": "./dist/*.js"
     },
+    "./*.ts": {
+      "types": "./dist/*.d.ts",
+      "default": "./dist/*.js"
+    },
     "./*.svelte": {
       "types": "./dist/*.svelte.d.ts",
       "svelte": "./dist/*.svelte",
