--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "node": ">=22.15"
   },
   "peerDependencies": {
-    "@ryanatkn/belt": "^0.35.1",
-    "@ryanatkn/fuz": "^0.147.0",
-    "@ryanatkn/moss": "^0.36.2",
+    "@ryanatkn/belt": ">=0.35.1",
+    "@ryanatkn/fuz": ">=0.147.0",
+    "@ryanatkn/moss": ">=0.36.2",
     "@sveltejs/kit": "^2",
     "date-fns": "^4",
     "esm-env": "^1",
@@ -40,12 +40,12 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.1",
-    "@ryanatkn/belt": "^0.35.1",
-    "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.147.0",
+    "@ryanatkn/belt": "^0.38.0",
+    "@ryanatkn/eslint-config": "^0.9.0",
+    "@ryanatkn/fuz": "^0.158.0",
     "@ryanatkn/fuz_code": "^0.27.1",
-    "@ryanatkn/gro": "^0.169.1",
-    "@ryanatkn/moss": "^0.36.0",
+    "@ryanatkn/gro": "^0.174.2",
+    "@ryanatkn/moss": "^0.38.0",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.37.1",
     "@sveltejs/package": "^2.5.0",
