--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "node": ">=22.15"
   },
   "peerDependencies": {
-    "@ryanatkn/belt": "^0.35.1",
-    "@ryanatkn/fuz": "^0.147.0",
-    "@ryanatkn/moss": "^0.36.2",
+    "@ryanatkn/belt": ">=0.38.0",
+    "@ryanatkn/fuz": ">=0.158.0",
+    "@ryanatkn/moss": ">=0.38.0",
     "@sveltejs/kit": "^2",
     "date-fns": "^4",
     "esm-env": "^1",
@@ -40,28 +40,28 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.1",
-    "@ryanatkn/belt": "^0.35.1",
-    "@ryanatkn/eslint-config": "^0.8.0",
-    "@ryanatkn/fuz": "^0.147.0",
-    "@ryanatkn/fuz_code": "^0.27.1",
-    "@ryanatkn/gro": "^0.169.1",
-    "@ryanatkn/moss": "^0.36.0",
-    "@sveltejs/adapter-static": "^3.0.9",
-    "@sveltejs/kit": "^2.37.1",
-    "@sveltejs/package": "^2.5.0",
-    "@sveltejs/vite-plugin-svelte": "^6.1.4",
+    "@ryanatkn/belt": "^0.38.0",
+    "@ryanatkn/eslint-config": "^0.9.0",
+    "@ryanatkn/fuz": "^0.158.0",
+    "@ryanatkn/fuz_code": "^0.34.0",
+    "@ryanatkn/gro": "^0.174.2",
+    "@ryanatkn/moss": "^0.38.0",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.49.0",
+    "@sveltejs/package": "^2.5.6",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.35.0",
-    "eslint-plugin-svelte": "^3.12.2",
+    "eslint": "^9.39.1",
+    "eslint-plugin-svelte": "^3.13.0",
     "esm-env": "^1.2.2",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.38.7",
-    "svelte-check": "^4.3.1",
+    "svelte": "^5.43.14",
+    "svelte-check": "^4.3.4",
     "tslib": "^2.8.1",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^4.0.13"
   },
   "prettier": {
     "plugins": [
