--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ryanatkn/fuz_mastodon",
+  "name": "@fuzdev/fuz_mastodon",
   "version": "0.36.0",
   "description": "Mastodon components and helpers for Svelte, SvelteKit, and Fuz",
   "glyph": "🦣",
@@ -8,13 +8,13 @@
   "public": true,
   "license": "MIT",
   "homepage": "https://mastodon.fuz.dev/",
-  "repository": "https://github.com/ryanatkn/fuz_mastodon",
+  "repository": "https://github.com/fuzdev/fuz_mastodon",
   "author": {
     "name": "Ryan Atkinson",
     "email": "mail@ryanatkn.com",
     "url": "https://www.ryanatkn.com/"
   },
-  "bugs": "https://github.com/ryanatkn/fuz_mastodon/issues",
+  "bugs": "https://github.com/fuzdev/fuz_mastodon/issues",
   "funding": "https://www.ryanatkn.com/funding",
   "scripts": {
     "start": "gro dev",
@@ -30,9 +30,9 @@
     "node": ">=22.15"
   },
   "peerDependencies": {
-    "@ryanatkn/belt": ">=0.39.0",
-    "@ryanatkn/fuz": ">=0.162.0",
-    "@ryanatkn/moss": ">=0.39.0",
+    "@fuzdev/fuz_util": ">=0.39.0",
+    "@fuzdev/fuz_ui": ">=0.162.0",
+    "@fuzdev/fuz_css": ">=0.39.0",
     "@sveltejs/kit": "^2",
     "date-fns": "^4",
     "esm-env": "^1",
@@ -40,12 +40,12 @@
   },
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.1",
-    "@ryanatkn/belt": "^0.40.0",
+    "@fuzdev/fuz_util": "^0.40.0",
     "@ryanatkn/eslint-config": "^0.9.0",
-    "@ryanatkn/fuz": "^0.165.0",
-    "@ryanatkn/fuz_code": "^0.36.0",
+    "@fuzdev/fuz_ui": "^0.165.0",
+    "@fuzdev/fuz_code": "^0.36.0",
     "@ryanatkn/gro": "^0.179.0",
-    "@ryanatkn/moss": "^0.39.0",
+    "@fuzdev/fuz_css": "^0.39.0",
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.49.0",
     "@sveltejs/package": "^2.5.6",
